fix images not loading correctly on mobile

--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body{
     flex-direction: column;
 }
 img {
-    height: 300px;
-    width: 500px;
+    max-width:100%;
+    width: 400px;
     border-radius: 50px;
     margin-bottom: 1.5em;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
